<resources>
    <string name="app_name">Sportea</string>
    <!--  Measure enum  -->
    <string name="kg">kg</string>
    <string name="times">times</string>
    <string name="sec">sec</string>
    <!--  Navigation button name  -->
    <string name="home_name_button">Дом</string>
    <string name="profile_name_button">Профиль</string>
    <string name="settings_name_button">Настройки</string>
    <string name="history_name_button">История</string>
    <!--  Toolbar name  -->
    <string name="home_toolbar">Программы</string>
    <string name="profile_toolbar">Профиль</string>
    <string name="statistics_toolbar">История</string>
    <string name="maps_toolbar">Maps</string>
    <string name="program_toolbar">Programs</string>
    <string name="exercises_toolbar">Упражнения</string>
    <string name="description_toolbar">Описания упражнений</string>
    <string name="exerciseName">Название</string>
    <!--  Gender enum  -->
    <string name="female">Female</string>
    <string name="male">Male</string>
    <!--  Program level enum  -->
    <string name="newbie">Новичок</string>
    <string name="amateur">Любитель</string>
    <string name="professional">Профессионал</string>
    <!--  Transaction names -->
    <string name="exerciseTransactionName">exercise</string>
    <!--  Buttons -->
    <string name="startTraining">Начать</string>
    <!--  Training mode -->
    <string name="preparing">Приготовьтесь</string>
    <string name="pause">Пауза</string>
    <string name="continueB">Продолжить</string>
    <string name="rest">ОТДЫХ</string>
    <string name="next">СЛЕДУЮЩЕЕ</string>
    <string name="done">Готово</string>
    <!--  Foreground service -->
    <string name="attention">Тренировка остановлена</string>
    <!--  Finish fragment -->
    <string name="exercise">Упражнения</string>
    <string name="kcal">Ккал</string>
    <string name="duration">Длительность</string>
    <string name="congrats">Отлично! Вы сделали это!</string>
    <string name="homeB">Домой</string>
    <!--  History fragment -->
    <string name="clearHistory">Clear history</string>
    <!--  Notification channels -->
    <string name="trainingChannel">Тренировки</string>
    <string name="reminderChannel">Напоминание</string>
    <!-- Remind notification -->
    <string name="reminderTitle">Напоминание</string>
    <string name="reminderContent">Вы давно не тренировались!</string>
    <!-- Settings fragment -->
    <string name="settingsNotification">Уведомления</string>
    <string name="settingsRemindNotify">Напоминание</string>
    <string name="settingsUserName">Имя</string>
    <string name="settings">Настройки</string>
    <string name="settingsUserSurname">Фамилия</string>
    <string name="settingsGender">Пол</string>
    <string name="settingsWeight">Вес</string>
    <string name="settingsHeight">Рост</string>
    <string name="settingsEmail">Ел. почта</string>

    <string name="summeryName">Установить имя</string>
    <string name="summerySurname">Установить фамилию</string>
    <string name="summeryGender">Установить пол</string>
    <string name="summeryWeight">Установить вес</string>
    <string name="summeryHeight">Установить рост</string>
    <string name="summeryEmail">Установить ел. почту</string>

    <string name="mockName">Ваше имя</string>
    <string name="mockGender">Мужчина</string>
    <string name="mockWeight">Ваш вес</string>
    <string name="mockHeight">Ваш рост</string>
    <string name="mockEmail">Ваша ел. почта</string>

    <string name="personalInformation">Персональная информация</string>

    <!-- Storage permission -->
    <string name="storagePermission">Для выбора фотографии нужен доступ к хранилищу</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="unsuccessful">Неудачная попытка</string>
    <string name="password">Пароль</string>
    <string name="login">Войти</string>
    <string name="sign_in">Зарегестрироваться</string>
    <string name="sign_in_with">Войти с помощью</string>
    <string name="welcome">Добро пожаловать в Sportea</string>
    <string name="empty_fields">Заполните поля</string>
    <string name="account_exists">Аккаунт существует или данные введены неправильно</string>
    <string name="incorrect_data">Данные введены некорректно</string>
    <string name="no_account">Выберете аккаунт для входа</string>

</resources>