<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.navigation.fragments.home.FinishTrainingFragment">

    <Button
        android:id="@+id/homeB"
        android:layout_width="210dp"
        android:layout_height="60dp"
        android:layout_marginBottom="116dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/homeB"
        style="@style/bottom_style"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:cornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.844" />

    <ImageView
        android:id="@+id/congratsIV"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/congratulations"
        style="@style/text_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/congrats"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/congratsIV" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/hi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:columnCount="3"
        app:layout_constraintBottom_toTopOf="@+id/homeB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/congratulations"
        app:layout_constraintVertical_bias="0.158"
        app:rowCount="2">

        <TextView
            android:id="@+id/exerciseValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:textSize="20sp"
            app:layout_columnWeight="1"
            app:layout_gravity="center"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/kcalValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:textSize="20sp"
            app:layout_columnWeight="1"
            app:layout_gravity="center"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/durationValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:textSize="20sp"
            app:layout_columnWeight="1"
            app:layout_gravity="center"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/exerciseCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:text="@string/exercise"
            android:textSize="16sp"
            app:layout_columnWeight="1"
            app:layout_gravity="center"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/kcalCount"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:text="@string/kcal"
            android:textSize="16sp"
            app:layout_columnWeight="1"
            app:layout_gravity="center"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/durationCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:text="@string/duration"
            android:textSize="16sp"
            app:layout_columnWeight="1"
            app:layout_gravity="center"
            app:layout_rowWeight="1" />
    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>